force-app/main/default/objects/PF_Sprints__c/PF_Sprints__c.object-meta.xml
<CustomObject>
    <description>This is where project sprints will be captured within the ProjectForce application.</description>
    <label>Sprint</label>
    <nameField>
        <label>Sprint Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sprints</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>