force-app/main/default/objects/PF_Sprints__c/fields/PF_End_Date__c.field-meta.xml
<CustomField>
    <fullName>PF_End_Date__c</fullName>
    <inlineHelpText>Select the actual end date for the sprint.</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>