force-app/main/default/objects/PF_Sprints__c/fields/PF_Number_of_Business_Day__c.field-meta.xml
<CustomField>
    <fullName>PF_Number_of_Business_Day__c</fullName>
    <formula>IF(AND((5 - (CASE(MOD( PF_Start_Date__c - DATE(1900, 1, 6), 7), 0, 0, 1, 5, 2, 5, 3, 4, 4, 3, 5, 2, 6, 1, 0)) &lt; (CASE(MOD( PF_End_Date__c - DATE(1900, 1, 6), 7), 0, 0, 1, 0, 2, 1, 3, 2, 4, 3, 5, 4, 6, 5, 0)) ), 
((( PF_End_Date__c - PF_Start_Date__c ) + 1) &lt; 7)), 
((CASE(MOD( PF_End_Date__c - DATE(1900, 1, 6), 7), 0, 0, 1, 0, 2, 1, 3, 2, 4, 3, 5, 4, 6, 5, 0)) - (5 - (CASE(MOD( PF_Start_Date__c - DATE(1900, 1, 6), 7), 0, 0, 1, 5, 2, 5, 3, 4, 4, 3, 5, 2, 6, 1, 0)))), 
(((FLOOR((( PF_End_Date__c - PF_Start_Date__c ) - (CASE(MOD( PF_Start_Date__c - DATE(1900, 1, 6), 7), 0, 0, 1, 6, 2, 5, 3, 4, 4, 3, 5, 2, 6, 1, 0))) / 7)) * 5) + 
(CASE(MOD( PF_Start_Date__c - DATE(1900, 1, 6), 7), 0, 0, 1, 5, 2, 5, 3, 4, 4, 3, 5, 2, 6, 1, 0)) + 
(CASE(MOD( PF_End_Date__c - DATE(1900, 1, 6), 7), 0, 0, 1, 0, 2, 1, 3, 2, 4, 3, 5, 4, 6, 5, 0))))</formula>
    <label>Number of Business Day</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>