force-app/main/default/objects/PF_Sprints__c/fields/PF_Release__c.field-meta.xml
<CustomField>
    <fullName>PF_Release__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Select the related release for this sprint.</inlineHelpText>
    <label>Release</label>
    <referenceTo>PF_Release__c</referenceTo>
    <relationshipLabel>Sprints</relationshipLabel>
    <relationshipName>Sprints</relationshipName>
    <type>Lookup</type>
</CustomField>