force-app/main/default/objects/PF_Sprints__c/fields/PF_Sprint_Description__c.field-meta.xml
<CustomField>
    <fullName>PF_Sprint_Description__c</fullName>
    <inlineHelpText>Provide a summary level description for the sprint.</inlineHelpText>
    <label>Sprint Description</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>