force-app/main/default/objects/PF_Sprints__c/fields/PF_Sprint_Status__c.field-meta.xml
<CustomField>
    <fullName>PF_Sprint_Status__c</fullName>
    <inlineHelpText>Select the status for the sprint.</inlineHelpText>
    <label>Sprint Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
                <color>#0B6FCE</color>
                <default>true</default>
                <label>Not Started</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
                <color>#78C953</color>
                <label>In Progress</label>
            </value>
            <value>
                <fullName>Completed</fullName>
                <color>#666666</color>
                <label>Completed</label>
            </value>
            <value>
                <fullName>Cancelled</fullName>
                <color>#A845DC</color>
                <label>Cancelled</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>