force-app/main/default/objects/PF_Sprints__c/fields/PF_Sprint_Velocity__c.field-meta.xml
<CustomField>
    <fullName>PF_Sprint_Velocity__c</fullName>
    <formula>PF_Sprint_Capacity__c  / PF_Number_of_Business_Day__c</formula>
    <inlineHelpText>Sprint Velocity is the optimized burn down rate. Velocity = Sprint Capacity / Number of Business Days in Sprint.</inlineHelpText>
    <label>Sprint Velocity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>