force-app/main/default/objects/PF_Sprints__c/fields/PF_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>PF_Start_Date__c</fullName>
    <inlineHelpText>Select the actual start date for the sprint.</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>