force-app/main/default/objects/PF_Sprints__c/fields/PF_Total_Sprint_Capacity__c.field-meta.xml
<CustomField>
    <fullName>PF_Total_Sprint_Capacity__c</fullName>
    <formula>IF( PF_Number_of_Business_Day__c &gt; 0,(PF_Number_of_Business_Day__c * 8 * PF_Number_Of_Resources__c ),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Sprint Capacity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>