force-app/main/default/objects/PF_Sprints__c/recordTypes/PF_Sprint.recordType-meta.xml
<RecordType>
    <fullName>PF_Sprint</fullName>
    <active>true</active>
    <description>Standard pForce record type.</description>
    <label>Sprint</label>
</RecordType>