force-app/main/default/objects/PF_Sprints__c/validationRules/Start_End_Date_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_End_Date_Check</fullName>
    <active>true</active>
    <description>Start date cannot be greater than end date.</description>
    <errorConditionFormula>PF_Start_Date__c &gt; PF_End_Date__c</errorConditionFormula>
    <errorMessage>Start date cannot be greater than end date.</errorMessage>
</ValidationRule>