force-app/main/default/objects/PF_Sprints__c/listViews/PF_All.listView-meta.xml
<ListView>
    <fullName>PF_All</fullName>
    <columns>NAME</columns>
    <columns>PF_Sprint_Number__c</columns>
    <columns>PF_Sprint_Description__c</columns>
    <columns>PF_Start_Date__c</columns>
    <columns>PF_End_Date__c</columns>
    <columns>PF_Sprint_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>